[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptfetch"
version = "0.1.0"
description = "AI-Driven Data Query Library for Firebase and Supabase"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["prompt", "fetch", "ai"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/yourusername/PromptFetch"
Repository = "https://github.com/yourusername/PromptFetch.git"
